syntax = "proto3"; // 告诉编译器此文件使用什么版本语法

package v1;
import "google/protobuf/timestamp.proto";

option go_package = "github.com/qiwen698/miniblog/pkg/proto/miniblog/v1";

// Miniblog 定义一个 MiniBlog RPC 服务.n
service MiniBlog{
  rpc ListUser(ListUserRequest) returns (ListUserResponse){}
}

message UserInfo{
  string username = 1;
  string nickname = 2;
  string email = 3;
  string phone = 4;
  int64 postCount = 5;
  google.protobuf.Timestamp createAt = 6;
  google.protobuf.Timestamp updateAt = 7;
}
// ListUserRequest 制定了 `ListUser` 接口的请求参数.
message ListUserRequest {
   int64  limit = 1;
   int64  offset = 2;
}
// ListUserResponse 指定了 `GET /v1/users `接口的返回参数，相当于 HTTP Response
message ListUserResponse {
  int64 totalCount = 1;
  repeated UserInfo Users = 2;
}
